Make project scratch buffer be created based on last mode visited. Add config for elfeed.

--- a/config.org
+++ b/config.org
@@ -23,7 +23,8 @@ Some functionality uses this to identify you, e.g. GPG configuration, email clie
 * Global
 #+BEGIN_SRC emacs-lisp
 ;;(remove-hook 'doom-first-buffer-hook #'smartparens-global-mode)
-(setq! show-paren-mode 1)
+(setq! show-paren-mode 1
+       doom-scratch-initial-major-mode t)
 #+END_SRC
 * Appearance
 ** Fonts
@@ -636,6 +637,33 @@ If you use `org' and don't want your org files in the default location below, ch
 (add-hook! 'org-mode-hook
            #'visual-line-mode
            #'org-indent-mode)
+#+END_SRC
+* RSS Reader
+Settings for Elfeed rss feed reader
+#+BEGIN_SRC emacs-lisp
+(after! elfeed
+  (use-package! elfeed
+    :config
+    (setq elfeed-feeds
+          '(("http://www.garynorth.com/mysite.xml" economics)
+            ("http://feeds.fee.org/FEE-Freeman" economics)
+            ("https://www.eff.org/rss" technology politics)
+            ("https://emacsredux.com/feed.xml" blog emacs)
+            ("http://emacsrocks.com/atom.xml" blog emacs)
+            ("http://pragmaticemacs.com/feed/" blog emacs)
+            ("https://stackoverflow.com/feeds/tag?tagnames=emacs&sort=newest" stackoverflow emacs)
+            ("https://www.reddit.com/r/emacs.rss" reddit technology emacs)
+            ("https://www.reddit.com/r/lisp.rss" reddit technology lisp)
+            ("https://www.reddit.com/r/clojure.rss" reddit technology lisp clojure)
+            ("https://www.reddit.com/r/Racket.rss" reddit technology lisp racket)
+            ("https://stevelosh.com/rss.xml" blog technology lisp)
+            ("http://planet.lisp.org/rss20.xml" blog technology lisp)
+            ("https://lispblog.xach.com/rss" blog technology lisp)
+            ("https://lispnews.wordpress.com/rss.xml" blog technology lisp)
+            ("https://borretti.me/feed.xml" blog technology)
+            ("https://stackoverflow.com/feeds/tag?tagnames=common-lisp&sort=newest" stackoverflow lisp)
+            ("https://planet.kde.org/global/atom.xml/" blog desktop kde)
+            ("https://www.kdevelop.org/rss.xml" blog desktop kde kdevelop)))))
 #+END_SRC
 * Programming Languages
 ** General
