Add new default font (the conditional does not work under systemd daemon)

--- a/config.org
+++ b/config.org
@@ -34,7 +34,9 @@ Doom exposes five (optional) variables for controlling fonts in Doom. Here are t
 - ~doom-big-font~ -- used for ~doom-big-font-mode~ Use this for presentations or streaming.
 They all accept either a font-spec, font string ("Input Mono-12"), or xlfd font string. You generally only need these two:
 #+BEGIN_SRC emacs-lisp
-(setq doom-font (font-spec :family "monospace" :size 18))
+;; Default for doom (setq doom-font (font-spec :family "monospace" :size 18))
+(when (member "Iosevka Fixed" (font-family-list))
+  (setq! doom-font (font-spec :family "Iosevka Fixed" :size 18)))
 #+END_SRC
 ** Theme
 There are two ways to load a theme. Both assume the theme is installed and available. You can either set ~doom-theme~ or manually load a theme with the ~load-theme~ function. This is the default:
