--- a/config.org
+++ b/config.org
@@ -138,14 +138,16 @@ These are some convenience functions for programs I run often.
 (defun neofetch ()
   (interactive)
   (ansi-term "neofetch"))
-
 #+END_SRC
+* Run program
 This is for running arbitrary programs I don't run often.
 #+BEGIN_SRC emacs-lisp
+(use-package! dired)
 (defun run-program (input)
   (interactive
-   (list (split-string (read-shell-command "run command: "))))
-  (make-process :name "run-program" :buffer nil :command input))
+   (list (read-shell-command "run command: ")))
+  (let ((cmd (split-string input)))
+    (dired-start-process (car cmd) (cdr cmd))))
 
 (map! "C-!" #'run-program)
 #+END_SRC
@@ -373,6 +375,37 @@ Use Gmail in gnus
 (setq! dired-hide-details-mode t)
 (setq! ranger-override-dired-mode t)
 #+END_SRC
+** Functions
+#+BEGIN_SRC emacs-lisp
+;; Dired code taken from https://oremacs.com/2015/01/04/dired-nohup/
+;; This incorporates nohup with starting a process
+(after! dired
+  (use-package! dired-aux)
+
+  (defvar dired-filelist-cmd
+    '(("vlc" "-L")))
+
+  (defun dired-start-process (cmd &optional file-list)
+    (interactive
+     (let ((files (dired-get-marked-files
+                   t current-prefix-arg)))
+       (list
+        (dired-read-shell-command "& on %s: "
+                                  current-prefix-arg files)
+        files)))
+    (let (list-switch)
+      (start-process
+       cmd nil shell-file-name
+       shell-command-switch
+       (format
+        "nohup 1>/dev/null 2>/dev/null %s \"%s\""
+        (if (and (> (length file-list) 1)
+                 (setq list-switch
+                       (cadr (assoc cmd dired-filelist-cmd))))
+            (format "%s %s" cmd list-switch)
+          cmd)
+        (mapconcat #'expand-file-name file-list "\" \""))))))
+#+END_SRC
 * Shells
 ** Multi-vterm
 #+BEGIN_SRC emacs-lisp :tangle packages.el
@@ -589,7 +622,7 @@ Use Gmail in gnus
 ** Org files location
 If you use `org' and don't want your org files in the default location below, change `org-directory'. It must be set before org loads!
 #+BEGIN_SRC emacs-lisp
-(setq org-directory "~/org/")
+(setq org-directory "~/org")
 #+END_SRC
 ** Basic Config
 #+BEGIN_SRC emacs-lisp
@@ -667,7 +700,7 @@ If you use `org' and don't want your org files in the default location below, ch
 #+END_SRC
 *** org-protocol
 #+BEGIN_SRC emacs-lisp
-(use-package! org-protocol)
+;;(use-package! org-protocol)
 #+END_SRC
 *** Agenda files
 #+BEGIN_SRC emacs-lisp
@@ -677,32 +710,30 @@ If you use `org' and don't want your org files in the default location below, ch
 #+END_SRC
 *** Templates
 #+BEGIN_SRC emacs-lisp
-(setq! org-capture-templates
-       `(("h" "Home Templates")
-         ("ht" "Todo" entry (file+datetree "~/org/GTD/home/home-gtd.org" "Tasks")
-          "* TODO %?\nEntered on %U\n  %i\n  %a")
-         ("hj" "Journal" entry (file+datetree "~/org/home/journal.org")
-          "* %?\nEntered on %U\n  %i\n  %a")
-         ("w" "Work Templates")
-         ("wt" "Todo" entry (file+datetree "~/org/GTD/work/work-gtd.org" "Tasks")
-          "* TODO %?\nEntered on %U\n  %i\n  %a")
-         ("wT" "Training" entry (file+datetree "~/org/GTD/work/work-gtd.org" "Training")
-          "* TODO %?\nEntered on %U\n  %i\n  %a")
-         ("wc" "Credential Automation" entry (file+datetree "~/org/GTD/work/work-gtd.org" "Credential Automation")
-          "* TODO %?\nEntered on %U\n  %i\n  %a")
-         ("wd" "Documentation" entry (file+datetree "~/org/GTD/work/work-gtd.org" "Documentation")
-          "* TODO %?\nEntered on %U\n  %i\n  %a")
-         ("wm" "Metrics" entry (file+datetree "~/org/GTD/work/work-gtd.org" "Metrics")
-          "* TODO %?\nEntered on %U\n  %i\n  %a")
-         ("wD" "Dashboards" entry (file+datetree "~/org/GTD/work/work-gtd.org" "Dashboards")
-          "* TODO %?\nEntered on %U\n  %i\n  %a")
-         ))
+
 #+END_SRC
 *** Settings
 #+BEGIN_SRC emacs-lisp
 (add-hook! 'org-mode-hook
            #'visual-line-mode
            #'org-indent-mode)
+#+END_SRC
+** Org-Roam
+#+BEGIN_SRC emacs-lisp
+(let ((roam-dir "~/org/roam"))
+  (when (not (file-exists-p roam-dir))
+    (make-directory roam-dir))
+  (setq! org-roam-directory roam-dir))
+(add-hook! 'after-init-hook 'org-roam-mode)
+(use-package! org-roam-protocol)
+(after! org-roam
+  (setq! org-roam-capture-templates
+         '(("d" "default" plain #'org-roam-capture--get-point
+            "%?"
+            :file-name "%<%Y%m%d%H%M%S>-${slug}"
+            :head "#+TITLE: ${title}"
+            "%i"
+            :unnarrowed t))))
 #+END_SRC
 * RSS Reader
 Settings for Elfeed rss feed reader
