--- a/config.org
+++ b/config.org
@@ -123,6 +123,18 @@ This will kill the buffer and return back to the last buffer visited, when you s
 #+END_SRC
 These are some convenience functions for programs I run often.
 #+BEGIN_SRC emacs-lisp
+;; Function for determining the Linux distribution (if it is Linux)
+;; Return system-type, unless system-type is gnu/linux, then
+;;  return the output of lsb_release if available.
+(defun system-distribution()
+  (if (and (string= system-type "gnu/linux")
+           (executable-find "lsb_release"))
+      (replace-regexp-in-string ;; NixOS echos extraneous quotes in lsb_release
+       "\\W" ""
+       (car (split-string (shell-command-to-string "lsb_release -sd"))))
+    system-type))
+(setq system-distro (system-distribution))
+
 (defun multi-term-program (program)
   "Make a multi-term buffer running program."
   (let ((multi-term-program program))
@@ -399,6 +411,11 @@ Use Gmail in gnus
 (package! multi-vterm)
 #+END_SRC
 #+BEGIN_SRC emacs-lisp
+(when (string= system-distro "NixOS")
+  (let ((emacs-path (concat (getenv "HOME") "/.nix-profile/share/emacs/site-lisp/elpa/vterm-20200107.1419")))
+    (add-to-list 'load-path emacs-path)
+    (load! (concat emacs-path "/vterm.el")))
+
 (after! vterm
   (use-package! multi-vterm)
   (map! "C-M-<right>" 'multi-vterm-next
